(lang dune 3.0)
(name camlcoin)
(generate_opam_files true)
(source (github camlcoin/camlcoin))
(license MIT)
(authors "CamlCoin Developers")
(maintainers "dev@camlcoin.org")
(package
 (name camlcoin)
 (synopsis "Bitcoin full node implementation in OCaml")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (cstruct (>= 6.0.0))
  (cstruct-unix (>= 6.0.0))
  (ctypes (>= 0.20.0))
  (ctypes-foreign (>= 0.18.0))
  (lwt (>= 5.6.0))
  (lwt_ppx (>= 2.1.0))
  (cohttp-lwt-unix (>= 5.0.0))
  (yojson (>= 2.0.0))
  (digestif (>= 1.1.0))
  (mirage-crypto (>= 1.0.0))
  (alcotest (and (>= 1.6.0) :with-test))
  (qcheck (and (>= 0.20) :with-test))
  (qcheck-alcotest (and (>= 0.20) :with-test))
  (cmdliner (>= 1.1.0))
  (logs (>= 0.7.0))
  (fmt (>= 0.9.0))
))
