(tests
 (names test_types test_serialize test_crypto test_address test_script test_consensus test_storage test_validation test_p2p test_peer test_peer_manager test_sync test_utxo test_mempool test_fee_estimation test_mining test_wallet test_perf test_rpc test_block_index)
 (libraries camlcoin alcotest qcheck qcheck-alcotest str))
