(tests
 (names test_types test_serialize test_crypto test_address test_script test_consensus test_storage test_validation test_p2p test_peer test_peer_manager test_sync test_utxo test_mempool test_fee_estimation test_mining test_wallet test_perf test_rpc test_rest test_block_index test_psbt test_descriptor test_miniscript test_assume_utxo test_compressor test_zmq test_regtest test_sig_cache test_sighash_vectors test_script_vectors test_bip324_vectors test_cf_chainstate test_migration test_runtime_config test_muhash)
 (libraries camlcoin alcotest qcheck qcheck-alcotest str base64)
 (deps (source_tree ../resources))
 (preprocess (pps lwt_ppx)))
